adding processing of the route block signature (#39)
* adding processing of the route block signature

* Add signature verification

---------
